media query fixed

--- a/styles.css
+++ b/styles.css
@@ -29,38 +29,39 @@ h1 {
 #description {
   padding: 10px 0 20px 0;
 }
+.col-left label {
+  display: block;
+  padding-top: 4px;
+}
+.col-right {
+  text-align: left;
+}
 .col-right p {
   display: flex;
 }
 div {
   width: 50%;
   padding: 0 10px 20px 0;
-  @media(max-width: 500px) {
+}
+@media(max-width: 580px) {
+  div {
     width: 100%;
     text-align: left;
     padding-bottom: 10px;
   } 
 }
-.col-left {
-  @media(min-width: 500px) {
+@media(min-width: 580px) {
+  .col-left {
     text-align: right;
   }
 }
-.col-right {
-  text-align: left;
-}
 
-/* form */
 form {
   display: flex;
   flex-wrap: wrap;
   margin: 0px auto;
-  
 }
-.col-left label {
-  display: block;
-  padding-top: 4px;
-}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:active,
